# leworldmodel

./: .gitignore  CEM.ipynb  LeWorldModel.ipynb  Predictor.ipynb  README.md  SIGReg.ipynb  ViT.ipynb  cem.py  collect_dataset.ipynb  eval-lewm.ipynb  eval-wm.ipynb  eval.ipynb  eval.py  eval2.ipynb  jepa.py  main.py  model.py  pyproject.toml  save.ipynb  sigreg.py  train.ipynb  train.py
conf/: config.yaml
hf_tworoom/: README.md  config.json  lewm_object.ckpt  weights.pt
outputs/2026-06-19/09-00-43/.hydra/: config.yaml  hydra.yaml
outputs/2026-06-19/09-01-34/.hydra/: hydra.yaml
outputs/2026-06-19/09-01-47/.hydra/: hydra.yaml
outputs/2026-06-19/09-02-00/.hydra/: hydra.yaml
outputs/2026-06-19/09-02-56/.hydra/: hydra.yaml
outputs/2026-06-19/09-03-18/.hydra/: hydra.yaml
outputs/2026-06-19/09-03-32/.hydra/: hydra.yaml
outputs/2026-06-19/09-03-44/.hydra/: hydra.yaml
outputs/2026-06-19/09-03-56/.hydra/: hydra.yaml
outputs/2026-06-19/09-04-09/.hydra/: hydra.yaml
outputs/2026-06-19/09-05-01/.hydra/: hydra.yaml
outputs/2026-06-19/09-05-30/.hydra/: hydra.yaml
outputs/2026-06-19/09-06-09/.hydra/: config.yaml  hydra.yaml
outputs/2026-06-19/09-06-57/.hydra/: config.yaml  hydra.yaml
outputs/2026-06-19/09-08-00/.hydra/: config.yaml  hydra.yaml
outputs/2026-06-19/09-08-48/.hydra/: config.yaml  hydra.yaml
outputs/2026-06-19/09-12-21/.hydra/: hydra.yaml
outputs/2026-06-19/09-13-41/.hydra/: hydra.yaml
outputs/2026-06-19/09-15-21/.hydra/: hydra.yaml
outputs/2026-06-19/09-16-31/.hydra/: hydra.yaml
outputs/2026-06-19/09-18-00/.hydra/: config.yaml  (+1 more)
(+12 files in other folders)
