[project]
name = "leworldmodel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gym-pusht>=0.1.6",
    "hydra-core>=1.3.3",
    "jupyterlab>=4.5.8",
    "opencv-python-headless>=4.13.0.92",
    "pygame>=2.6.1",
    "pymunk>=6.6.0,<7.0.0",
    "shapely>=2.1.2",
    "stable-worldmodel[env,train]>=0.1.1",
]
